# python-crud-api

./: README.md  docker-compose.yaml  load.sh  requirements.txt  tmp.yaml
.github/workflows/: open-pr.yaml  python-ci.yaml  release-tag.yaml  rust-ci.yaml
app/: helper.py  main.py  orders.py  test_main.py  uwsgi.ini
app/config/: dev.ini
python/: Dockerfile  Pipfile  build.sh  requirements.txt  skaffold.yaml  test.sh  tmp.yaml
python/app/: helper.py  main.py
python/app/config/: dev.ini  local.ini
python/k8s/: app.yaml
python/k8s/base/: app.yaml  kustomization.yaml
python/k8s/overlays/dev/: app.yaml  kustomization.yaml
python/k8s/overlays/local/: app.yaml  kustomization.yaml
python/k8s/overlays/staging/: app.yaml  kustomization.yaml
python/liquibase/: changelog.xml  changelog.yaml  liquibase.properties
rust/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  prepare.sh
rust/.sqlx/: query-2176d50d45fddbe2c28734bf83fd5c9dd965486cf276f10cfbea5e28f4577c70.json  query-2daa13301cdb2de87106b7d675b18a7d8fd1325c481c179bc17ff2480b7a64e2.json  query-38f4eb6918a33ba0c0467105ac848346d56712198eabd63899927cc95813d409.json  query-b58d21adac5a922d71d4ea8b9247098f5e177518c9cbf9f2afd6bd4232900d52.json  query-b84008176536227e2f26e33033b16c636eb3268b4d874cf4b23128f3d21ff422.json  query-f1355f41509c7a58fa5515412173b75f7c527e1d2134d035ee89bb2af9394199.json
rust/liquibase/: changelog.yaml  sqlx-docker-compose.yaml
rust/src/: db.rs  error.rs  handler.rs  main.rs  model.rs  mongo.rs  mongo.rs.tmp  pg.rs  response.rs  route.rs  schema.rs
server/: start.sh
